fixed font size on iphone rotation

--- a/sc.css
+++ b/sc.css
@@ -197,7 +197,7 @@ body{
     width:300px;
     border-radius:40px;
     display: block;
-    margin-top: -92px;
+    margin-top: -100px;fi
 }
 .screen{
     height:60px;
@@ -232,6 +232,7 @@ p{
     width:40px;
     height:40px;
     border:none;
+    font-size: 11px;
     border-radius:50%;
     margin-left: 10px;
     cursor:pointer;
